# rusty-jam-2

./: .gitignore  Cargo.toml  README.md  todo.org
client/: Cargo.toml  index.html
client/src/: connect_menu.rs  input.rs  lib.rs  main.rs
client/src/common_systems/: chat.rs  mod.rs
client/src/countdown_menu/: resources.rs  systems.rs
client/src/game/: components.rs  resources.rs  systems.rs
client/src/game/systems/: input.rs  mod.rs  tile_info.rs
client/src/waiting_for_more_connections_menu/: resources.rs  systems.rs
server/: Cargo.toml
server/assets/: default.map
server/src/: components.rs  main.rs  resources.rs
server/src/countdown/: events.rs  mod.rs  resources.rs
server/src/playing/: events.rs  mod.rs  resources.rs
server/src/waiting_for_connections/: events.rs  mod.rs
shared/: Cargo.toml
shared/src/: channels.rs  lib.rs  shared.rs
shared/src/behavior/: handle_input.rs  mod.rs
shared/src/components/: genome.rs  mod.rs  players.rs
shared/src/protocol/: client_keep_alive.rs  countdown.rs  identification.rs  map_sync.rs  mod.rs  player_input.rs  unit_sync.rs  waiting_on_players.rs
shared/src/protocol/chat/: mod.rs  receive_chat.rs  send_chat.rs
shared/src/protocol/game_sync/: map_sync.rs  mod.rs  unit_sync.rs
shared/src/protocol/notifications/: client_connected.rs  game_start.rs  genome_status_change.rs  mod.rs  turn_change.rs
shared/src/resources/: mod.rs
