[package]
name = "rgj_client"
version = "0.1.0"
publish = false
authors = ["Daniel Lyne <DLyne@pm.me>"]
edition = "2021"

[features]
default = [
    "bevy_kira_audio/ogg"
]

dev = [
    "bevy/dynamic",
]

[dependencies]
bevy = { version = "0.7", default-features = true }
bevy_asset_loader = { version = "0.11" }
bevy_egui = {version = "0.14", features = ["immutable_ctx"] }
bevy_kira_audio = { version = "0.10" }
bevy_prototype_lyon = "0.5"
iyes_loopless = "0.5"
leafwing-input-manager = "0.3"
naia-bevy-client = { git = "https://github.com/naia-lib/naia.git" }
rand = "0.8.3"

rgj_shared = { path = "../shared/" }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.25", features=["x11"]}

[build-dependencies]
embed-resource = "1.4"
